<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:paddingEnd="20dp"
            android:text="@string/usuario"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextUser"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="VisualLintBounds">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:paddingEnd="-5dp"
            android:text="@string/contrasena" />

        <EditText
            android:id="@+id/editTextContra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />
    </LinearLayout>

    <Button
        android:id="@+id/BotonRegistro"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="350dp"
        android:backgroundTint="@color/black"
        android:text="@string/registro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/ButtonLogin"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="350dp"
        android:backgroundTint="@color/black"
        android:enabled="false"
        android:text="@string/login"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/BotonRegistro"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>